<resources>
    <string name="app_name">Animatch</string>
    <string name="instructions">match the animal pairs</string>
    <string name="reset">reset</string>
    <string name="music">music</string>
    <string name="pairs_found">pairs found</string>
    <string name="victory">you found them all!</string>
    <string name="halfway">halfway there…</string>
    <string name="steps">steps</string>
    <string name="secrets">secrets</string>
    <string name="generator">color icon generator</string>
    <string name="how_many">how many?</string>
    <string name="which_color">which color?</string>
    <string name="create">create</string>
    <string name="random">random</string>
    <string name="clear">clear</string>
    <string name="back">back</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="grey">grey</string>
    <string name="pink">pink</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="crash">let\'s not crash the app… :)</string>
    <string name="secret_steps_1">you are</string>
    <string name="secret_steps_2">steps away…</string>
    <string name="secret_found">you found the secret!</string>
    <string name="secret_steps_3">step away…</string>
    <string name="main_menu_title">animatch</string>
    <string name="continueButton">continue</string>
    <string name="new_game">new game</string>
    <string name="settings">settings</string>
    <string name="high_score">high score</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="board_size_title">select the board size</string>
    <string name="dark_blue">dark blue</string>
    <string name="dark_green">dark green</string>
    <string name="light_grey">light grey</string>
    <string name="brown">brown</string>
    <string name="warning">warning</string>
    <string name="progression_deleted">your progression</string>
    <string name="will_be">will be deleted</string>
    <string name="menu">menu</string>
    <string name="next">next</string>
    <string name="great_job">great job!</string>
    <string name="you_matched_all">you matched all</string>
    <string name="the_animal_pairs">the animal pairs</string>
    <string name="difficulty">difficulty</string>
    <string name="start_a_new_game">start a new game first!</string>
</resources>