<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secretsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:keepScreenOn="true"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:includeFontPadding="true"
        android:text="@string/secrets"
        android:textColor="#e0e0e0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/createColorObjects"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createColorObjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:includeFontPadding="true"
        android:text="@string/generator"
        android:textColor="#e0e0e0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/settingsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/initializeObjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createColorObjects">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:includeFontPadding="true"
                android:text="@string/how_many"
                android:textColor="#e0e0e0"
                android:textSize="16sp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/numOfObjects"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0e0e0"
                android:fontFamily="@font/roboto"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="#e0e0e0"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/which_color"
                android:textColor="#e0e0e0"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/colorOfObjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0e0e0"
                android:entries="@array/color_names"
                android:gravity="end"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/initializeObjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/settingsLayout">

        <Button
            android:id="@+id/create"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="#212121"
            android:fontFamily="@font/roboto"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="#e0e0e0"
            android:textSize="16sp" />

        <Button
            android:id="@+id/random"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="#212121"
            android:fontFamily="@font/roboto"
            android:text="@string/random"
            android:textAllCaps="false"
            android:textColor="#e0e0e0"
            android:textSize="16sp" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="#212121"
            android:fontFamily="@font/roboto"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="#e0e0e0"
            android:textSize="16sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:fadeScrollbars="true"
        android:fadingEdgeLength="100dp"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/initializeObjects" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="#212121"
        android:fontFamily="@font/roboto"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#e0e0e0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>