<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:screenOrientation="portrait"
    tools:context=".WarningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageButtonMainMenu"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="false"
            android:background="@drawable/color_icon"
            android:backgroundTint="#212121"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/warning"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="true"
            android:text="@string/warning"
            android:textColor="#e0e0e0"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/grid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/warningMessage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="true"
            android:text="@string/progression_deleted"
            android:lineSpacingExtra="10dp"
            android:textColor="#e0e0e0"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/grid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/warningMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="true"
            android:text="@string/will_be"
            android:lineSpacingExtra="10dp"
            android:textColor="#e0e0e0"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/grid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/settingButtonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="50dp">

            <Button
                android:id="@+id/warningBackButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#212121"
                android:fontFamily="@font/roboto"
                android:text="@string/back"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#e0e0e0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/warningResetButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#212121"
                android:fontFamily="@font/roboto"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#e0e0e0"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>